welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:18: error: type mismatch;
 found   : Int
 required: Boolean
	return n;
               ^